# dep5convert

./: .editorconfig  .flake8  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml
docs/: Makefile
docs/source/: calir.md  conf.py  index.rst  introduction.md
src/dep5convert/: __init__.py  __main__.py  cli.py  converters.py
src/dep5convert/calir/: __init__.py  classes.py  dep5_metadata.py  spdx_metadata.py
src/dep5convert/dep5_tools/: __init__.py  _util.py  classes.py  convert.py  convert_calir.py  convert_text.py  parser.py  util.py  writer.py
src/dep5convert/spdx_tools/: __init__.py  classes.py  convert.py  parser.py  writer.py
tests/: conftest.py  test_cli.py
tests/testdata/: simple
