# SPDX-FileCopyrightText: 2022 Stephan Lachnit <stephanlachnit@debian.org>
#
# SPDX-License-Identifier: CC0-1.0

[metadata]
name = dep5convert
version = 0.0.0
author = Stephan Lachnit
author_email = stephanlachnit@debian.org
description = module for converting DEP5-style copyright files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stephanlachnit/dep5convert
project_urls =
    Source = https://github.com/stephanlachnit/dep5convert
    Bug Tracker = https://github.com/stephanlachnit/dep5convert/issues
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dep5convert = dep5convert.cli:main

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme
    myst-parser
    sphinx_paramlinks
    sphinxcontrib.apidoc
